k8s/app/ingress-uma/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-uma
  namespace: aggregator-app
  labels:
    app: ingress-uma
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-uma
  template:
    metadata:
      labels:
        app: ingress-uma
    spec:
      terminationGracePeriodSeconds: 120
      containers:
        - name: ingress-uma
          image: ingress-uma
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: uma-key-volume
              mountPath: /keys
              readOnly: true
      volumes:
        - name: uma-key-volume
          secret:
            secretName: ingress-uma-key
