k8s/app/ingress-uma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-uma
  namespace: aggregator-app
spec:
  type: ClusterIP
  selector:
    app: ingress-uma
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
