k8s/app/ingress-uma/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-uma-ingressroute
  namespace: aggregator-app
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`aggregator.local`) && PathPrefix(`/uma`)
      kind: Rule
      services:
        - name: ingress-uma
          port: 80
      middlewares:
        - name: strip-uma-prefix
          namespace: aggregator-app
